in Index.html alle Aufgaben verlinkt

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-Hello World 
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Webtechnologien Übungsaufgaben 2018/2019</title>
+</head>
+
+<header>
+    <h1>Abgabe der Übungsaufgaben</h1>
+</header>
+
+<body>
+<p><a href="Aufgabe1/Aufgabe1.html">Aufgabe1</a></p>
+<p><a href="Aufgabe2/Aufgabe2.html">Aufgabe2</a></p>
+<p><a href="Aufgabe3/Aufgabe3.html">Aufgabe3</a></p>
+<p><a href="Aufgabe4/Aufgabe4.html">Aufgabe4</a></p>
+<p><a href="Aufgabe5/Aufgabe5.php">Aufgabe5</a></p>
+<p><a href="Aufgabe6/Aufgabe6.php">Aufgabe6</a></p>
+<p><a href="Aufgabe7/Aufgabe7.php">Aufgabe7</a></p>
+<p><a href="Aufgabe8/Aufgabe8.php">Aufgabe8</a></p>
+<p><a href="Aufgabe9/Aufgabe9.html">Aufgabe9</a></p>
+<p><a href="Aufgabe10/Aufgabe10.html">Aufgabe10</a></p>
+
+</body>
+
+</html>
